NEXT-1139 - Fix click behaviour of folder settings

--- a/Resources/administration/src/app/component/base/sw-modal/sw-modal.html.twig
+++ b/Resources/administration/src/app/component/base/sw-modal/sw-modal.html.twig
@@ -1,7 +1,7 @@
 {% block sw_modal %}
     <transition name="sw-modal-fade">
         {% block sw_modal_element %}
-            <div class="sw-modal" :class="modalClasses" @click.prevent="closeModalOnClickOutside">
+            <div class="sw-modal" :class="modalClasses" @click="closeModalOnClickOutside">
                 {% block sw_modal_dialog %}
                     <div class="sw-modal__dialog"
                          :style="{ maxWidth: size }"
