--- a/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.html.twig
@@ -20,7 +20,7 @@
                              :name="iconConfig.name"
                              size="90%"
                              class="sw-media-folder-item__folder-thumbnails"
-                             :color="iconConfig.color"
+                             :style="getIconStyle"
                              :multicolor="iconConfig.multicolor">
                     </sw-icon>
                 {% endblock %}
