change media-item-preview to sw-media-item-preview

--- a/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.html.twig
@@ -20,7 +20,7 @@
                              class="sw-media-folder-item__folder-thumbnails"
                              multicolor>
                     </sw-icon>
-                    <sw-icon slot="media-item-preview"
+                    <sw-icon slot="sw-media-item-preview"
                              v-else
                              :name="iconConfig.name"
                              size="90%"
