Combine search and smartbar into one header

--- a/Resources/administration/src/app/component/structure/sw-card-view/sw-card-view.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-card-view/sw-card-view.html.twig
@@ -1,7 +1,7 @@
 {% block sw_card_view %}
     <div class="sw-card-view" :class="cardViewClasses">
         {% block sw_card_view_content %}
-            <div class="sw-card-view__content" ref="cardContainer">
+            <div class="sw-card-view__content">
                 <slot>{% block sw_card_view_slot_default %}{% endblock %}</slot>
             </div>
         {% endblock %}
