--- a/Resources/administration/src/app/component/structure/sw-page/sw-page.html.twig
+++ b/Resources/administration/src/app/component/structure/sw-page/sw-page.html.twig
@@ -1,69 +1,72 @@
 {% block sw_page %}
     <div class="sw-page">
-
-        {% block sw_page_slot_search_bar %}
-            <slot name="search-bar">
-                <sw-search-bar :style="searchBarStyles"></sw-search-bar>
-            </slot>
-        {% endblock %}
-
-        {% block sw_page_smart_container %}
-            <div class="sw-page__container" :class="pageContainerClasses">
+        {% block sw_page_head_area %}
+            <div class="sw-page__head-area" :style="headerStyles">
+                {% block sw_page_search_bar %}
+                    <div class="sw-page__search-bar">
+                        <slot name="search-bar">
+                            {% block sw_page_slot_search_bar %}
+                                <sw-search-bar></sw-search-bar>
+                            {% endblock %}
+                        </slot>
+                    </div>
+                {% endblock %}
 
                 {% block sw_page_smart_bar %}
-                    <div v-if="showSmartBar" class="sw-page__smart-bar" :style="smartBarStyles">
+                    <template v-if="showSmartBar">
+                        {% block sw_page_smart_bar_divider %}
+                            <div class="sw-page__smart-bar-divider"></div>
+                        {% endblock %}
 
                         {% block sw_page_smart_bar_back_btn %}
-                            <slot name="smart-bar-back">
-                                {% block sw_page_slot_smart_bar_back %}
-                                    <router-link :to="{ name: parentRoute }" v-if="parentRoute"
-                                                 :style="{ 'color': pageColor }" class="smart-bar__back-btn">
-                                        <sw-icon name="small-arrow-large-left" size="16"></sw-icon>
-                                        <sw-icon :name="module.icon" v-if="module && module.icon"></sw-icon>
-                                    </router-link>
-                                {% endblock %}
-                            </slot>
+                            <div class="sw-page__back-btn-container">
+                                <slot name="smart-bar-back">
+                                    {% block sw_page_slot_smart_bar_back %}
+                                        <router-link v-if="parentRoute"
+                                                     class="smart-bar__back-btn"
+                                                     :to="{ name: parentRoute }"
+                                                     :style="{ 'color': pageColor }">
+                                            <sw-icon name="small-arrow-large-left" size="16"></sw-icon>
+                                            <sw-icon :name="module.icon" v-if="module && module.icon"></sw-icon>
+                                        </router-link>
+                                    {% endblock %}
+                                </slot>
+                            </div>
                         {% endblock %}
 
                         {% block sw_page_smart_bar_content %}
                             <div class="smart-bar__content">
+                                {% block sw_page_smart_bar_content_header %}
+                                    <div class="smart-bar__header">
+                                        <slot name="smart-bar-header">
+                                            {% block sw_page_slot_smart_bar_header %}
+                                                <h2 v-if="module && module.name">
+                                                    {{ module.name }}
+                                                </h2>
+                                            {% endblock %}
+                                        </slot>
+                                    </div>
+                                {% endblock %}
 
-                                {% block sw_page_smart_bar_content_inner %}
-                                    <div class="smart-bar__content-inner">
-
-                                        {% block sw_page_smart_bar_content_header %}
-                                            <div class="smart-bar__header">
-                                                <slot name="smart-bar-header">
-                                                    {% block sw_page_slot_smart_bar_header %}
-                                                        <h2 v-if="module && module.name">
-                                                            {{ module.name }}
-                                                        </h2>
-                                                    {% endblock %}
-                                                </slot>
-                                            </div>
-                                        {% endblock %}
-
-                                        {% block sw_page_smart_bar_content_actions %}
-                                            <div class="smart-bar__actions">
-                                                <slot name="smart-bar-actions">
-                                                    {% block sw_page_slot_smart_bar_actions %}{% endblock %}
-                                                </slot>
-                                            </div>
-                                        {% endblock %}
+                                {% block sw_page_smart_bar_content_actions %}
+                                    <div class="smart-bar__actions">
+                                        <slot name="smart-bar-actions">
+                                            {% block sw_page_slot_smart_bar_actions %}{% endblock %}
+                                        </slot>
                                     </div>
                                 {% endblock %}
                             </div>
                         {% endblock %}
-                    </div>
+                    </template>
                 {% endblock %}
+            </div>
+        {% endblock %}
 
-                {% block sw_page_content %}
-                    <div class="sw-page__content" ref="swPageContent">
-                        <slot name="content">
-                            {% block sw_page_slot_content %}{% endblock %}
-                        </slot>
-                    </div>
-                {% endblock %}
+        {% block sw_page_content %}
+            <div class="sw-page__content" ref="swPageContent">
+                <slot name="content">
+                    {% block sw_page_slot_content %}{% endblock %}
+                </slot>
             </div>
         {% endblock %}
     </div>
