--- a/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.less
+++ b/Resources/administration/src/app/component/media/sw-media-folder-item/sw-media-folder-item.less
@@ -14,5 +14,9 @@
         top: 50%;
         transform: translate(-50%, -50%);
         max-width: 64px;
+
+        &.is--inner {
+            margin-top: 2%;
+        }
     }
 }
