--- a/Resources/administration/src/module/sw-settings-rule/component/sw-condition-group/sw-condition-group.html.twig
+++ b/Resources/administration/src/module/sw-settings-rule/component/sw-condition-group/sw-condition-group.html.twig
@@ -25,16 +25,16 @@
 
             {% block sw_condition_group_field_condition_type_multi_select %}
                 <sw-condition-value multi :id="fieldName"
-                           :store="State.getStore(field.store)" class="sw-condition-group__field is--secondary"
-                           v-if="field.type === 'multiselect' && field.mode === 'store' && !dirty"
+                           :store="getStore(field.store)" class="sw-condition-group__field is--secondary"
+                           v-if="field.type === 'multiselect' && field.mode === 'store'"
                            v-model="condition.value[fieldName]">
                 </sw-condition-value>
             {% endblock %}
 
             {% block sw_condition_group_field_condition_type_single_select %}
-                <sw-select :id="fieldName" :store="State.getStore(field.store)"
+                <sw-select :id="fieldName" :store="getStore(field.store)"
                            class="sw-condition-group__field is--secondary"
-                           v-else-if="field.type === 'select' && field.mode === 'store' && !dirty"
+                           v-else-if="field.type === 'select' && field.mode === 'store'"
                            v-model="condition.value[fieldName]">
                 </sw-select>
             {% endblock %}
@@ -44,7 +44,7 @@
                           :name="fieldName"
 
                           v-model="condition.value[fieldName]"
-                          v-else-if="field.type === 'select' && field.mode === 'static' && !dirty">
+                          v-else-if="field.type === 'select' && field.mode === 'static'">
                     <template slot="options">
                         <template v-if="field.values">
                             <option v-for="(option, identifier) in field.values" :value="option.identifier ? option.identifier : identifier">
@@ -57,27 +57,27 @@
 
             {% block sw_condition_group_field_condition_type_datetime %}
                 <sw-field type="datetime" :name="fieldName" v-model="condition.value[fieldName]"
-                          v-else-if="field.type === 'datetime' && !dirty">
+                          v-else-if="field.type === 'datetime'">
                 </sw-field>
             {% endblock %}
 
             {% block sw_condition_group_field_condition_type_decimal %}
                 <sw-field type="number" step="0.01" v-model="condition.value[fieldName]"
-                          v-else-if="field.type === 'decimal' && !dirty">
+                          v-else-if="field.type === 'decimal'">
                 </sw-field>
             {% endblock %}
 
             {% block sw_condition_group_field_condition_type_int %}
-                <sw-field type="number" step="1" v-model="condition.value[fieldName]" v-else-if="field.type === 'int' && !dirty">
+                <sw-field type="number" step="1" v-model="condition.value[fieldName]" v-else-if="field.type === 'int'+y">
                 </sw-field>
             {% endblock %}
 
             {% block sw_condition_group_field_condition_type_text %}
-                <sw-field type="text" v-else-if="field.type === 'text' && !dirty" v-model="condition.value[fieldName]"></sw-field>
+                <sw-field type="text" v-else-if="field.type === 'text'" v-model="condition.value[fieldName]"></sw-field>
             {% endblock %}
 
             {% block sw_condition_group_field_condition_type_multi_other %}
-                <sw-field type="text" v-else-if="!dirty" v-model="condition.value[fieldName]"></sw-field>
+                <sw-field type="text" v-else v-model="condition.value[fieldName]"></sw-field>
             {% endblock %}
         </div>
 
