NEXT-1141 - Add snippet

--- a/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
+++ b/Resources/administration/src/module/sw-media/component/sidebar/sw-media-quickinfo/sw-media-quickinfo.html.twig
@@ -225,7 +225,7 @@
                                                  name="default-action-settings"
                                                  class="sw-media-quickinfo__quickactions-icon">
                                         </sw-icon>
-                                        Einstellungen
+                                        {{ $tc('sw-media.sidebar.actions.settings') }}
                                     </li>
                                 {% endblock %}
                             </ul>
