--- a/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.less
+++ b/Resources/administration/src/app/component/media/sw-media-upload/sw-media-upload.less
@@ -38,12 +38,33 @@
         .sw-media-upload__upload-caption {
             font-size: @sw-media-upload-caption-font-size;
             text-align: center;
-            margin: 0 0 8px;
+            margin: 0 0 20px;
+
 
             .sw-icon {
                 margin-right: 8px;
                 color: @sw-media-upload-caption-icon-color;
             }
+        }
+    }
+
+    .sw-media-upload__url-form {
+        max-width: 500px;
+        margin: auto;
+
+        .sw-media-url-form__submit-button {
+            width: 70px;
+            margin-left: auto;
+            margin-right: auto;
+            display: block;
+        }
+
+        .sw-media-url-form__url-input {
+            text-align: center;
+        }
+
+        .sw-media-url-form__extension-input {
+            text-align: center;
         }
     }
 
