--- a/Resources/administration/src/app/component/media/sw-media-modal-delete/sw-media-modal-delete.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-delete/sw-media-modal-delete.html.twig
@@ -13,7 +13,7 @@
 
                 {% block sw_media_modal_delete_cancel_button %}
                     <sw-button @click="closeDeleteModal($event)" size="small">
-                        {{ $tc('global.sw-media-modal-delete.buttonAbort') }}
+                        {{ $tc('global.sw-media-modal-delete.buttonCancel') }}
                     </sw-button>
                 {% endblock %}
 
