Show larger images for sw-media-base-item--is-list

--- a/Resources/administration/src/app/assets/less/variables.less
+++ b/Resources/administration/src/app/assets/less/variables.less
@@ -51,3 +51,6 @@
 @z-index-tooltip:                1100;
 @z-index-notifications:          1200;
 @z-index-dragdrop:               1400;
+
+//transparent-background
+@transparent-background-url: url('data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQAgMAAABinRfyAAAACVBMVEX39/f////+/v66RnnUAAAAM0lEQVQIHQXBwQ3AMAgEMC95SPRPpQxENuiete2HCqZRhWlkcV4kIIPb6MUWZpEHN+j9ARNGDXV0xoICAAAAAElFTkSuQmCC');
