--- a/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.less
+++ b/Resources/administration/src/app/component/media/sw-media-preview/sw-media-preview.less
@@ -23,7 +23,7 @@
         transform: translate(-50%, -50%);
 
         &.shows--transparency {
-            background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQAgMAAABinRfyAAAACVBMVEX39/f////+/v66RnnUAAAAM0lEQVQIHQXBwQ3AMAgEMC95SPRPpQxENuiete2HCqZRhWlkcV4kIIPb6MUWZpEHN+j9ARNGDXV0xoICAAAAAElFTkSuQmCC);
+            background: @transparent-background-url;
         }
 
         &.sw-media-preview__item--audio {
