--- a/Resources/administration/src/app/component/media/sw-media-modal-replace/sw-media-modal-replace.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-modal-replace/sw-media-modal-replace.html.twig
@@ -1,6 +1,6 @@
 {% block sw_media_modal_replace %}
     <sw-modal class="sw-media-modal-replace"
-              variant="small"
+              size="420px"
               :title="$tc('global.sw-media-modal-replace.titleModal')"
               @closeModal="emitCloseReplaceModal">
 
