--- a/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.less
+++ b/Resources/administration/src/module/sw-media/page/sw-media-index/sw-media-index.less
@@ -4,32 +4,18 @@
 @sw-media-index-font-size-navigation:              @font-size-large;
 @sw-media-index-color-breadcrumb-icon:             @color-gutenberg;
 @sw-media-index-color-navigation-parent:           @color-steam-cloud;
-@sw-media-index-color-navigation-current:          @color-black;
-@sw-media-index-color-text-button:                 @color-kashmir;
-@sw-media-index-font-size-change-icon-size-label:  @font-size-small;
-@sw-media-index-color-change-icon-size-label:      @color-kashmir;
-@sw-media-index-color-change-icon-size-slider:     @color-deep-cove;
-@sw-media-index-color-change-icon-size-slide:      @color-gutenberg;
-@sw-media-index-color-slider-container-border:     @color-steam-cloud;
-@sw-media-index-border-radius-slider-container:    @border-radius-default;
-@sw-media-index-background-color-slider-container: @color-white;
+@sw-media-index-color-navigation-current:          @color-kashmir;
 @sw-media-index-page-background-color:             @color-white;
-@sw-media-index-border-radius-size-slider:         @border-radius-default;
-@sw-media-index-font-family:                       @font-family-default;
-@sw-media-index-pagination-background:             @color-light-gray;
-@sw-media-index-pagination-border-color:           @color-steam-cloud;
-@sw-media-index-large-font-size:                   @font-size-large;
-@sw-media-index-default-font-size:                 @font-size-default;
 
 .sw-media-index {
     .sw-media-index__navigation {
-        display: inline-grid;
-        align-items: center;
-        grid-auto-flow: column;
+        display: grid;
+        grid-template-columns: auto auto 1fr;
         grid-column-gap: 8px;
+        align-items: center;
         padding-left: 20px;
         min-width: 150px;
-        font-size:@sw-media-index-font-size-navigation;
+        font-size: @sw-media-index-font-size-navigation;
     }
 
     .sw-media-index__navigation-breadcrumb {
@@ -38,18 +24,10 @@
         height: 16px;
     }
 
-    .sw-media-index__navigation-parent {
+    .sw-media-index__navigation-label {
         .truncate();
         color: @sw-media-index-color-navigation-parent;
-        a:any-link {
-            color: inherit;
-            text-decoration: none;
-        }
-    }
-
-    .sw-media-index__navigation-current {
-        .truncate();
-        color: @sw-media-index-color-navigation-current;
+        text-decoration: none;
     }
 
     .sw-media-index__page-content {
