--- a/Resources/administration/src/app/component/media/sw-sidebar-media-item/sw-sidebar-media-item.html.twig
+++ b/Resources/administration/src/app/component/media/sw-sidebar-media-item/sw-sidebar-media-item.html.twig
@@ -8,32 +8,54 @@
         {% block sw_sidebar_media_item_content %}
             <div class="sw-sidebar-media-item__content">
                 {% block sw_sidebar_media_item_search_field %}
-                    <div class="sw-sidebar-media-item__search-field">
-                        <sw-field
-                            class="sw-sidebar-media-item__search-input"
-                            v-model="term"
-                            :placeholder="$tc('global.sw-sidebar-media-item.placeholderSearch')"
-                            @input="onSearchInput">
-                        </sw-field>
-                        <sw-icon class="sw-sidebar-media-item__search-icon" name="small-search" small></sw-icon>
+                    <sw-simple-search-field v-model="term"></sw-simple-search-field>
+                {% endblock %}
+
+                {% block sw_sidebar_media_item_folder_navigation%}
+                    <div v-if="mediaFolder" class="sw-sidebar-media-item__folder-navigation">
+                        {% block sw_sidebar_media_item_folder_navigation_back%}
+                            <div @click="onNavigateToFolder(mediaFolder.parentId)" class="sw-sidebar-media-item__navigation-back">
+                                <sw-icon name="small-arrow-medium-left" class="sw-sidebar-media-item__folder-navigation-back-arrow" small></sw-icon>
+                                <sw-icon name="folder-breadcums-dropdown" size="32px" multicolor></sw-icon>
+                            </div>
+                        {% endblock %}
+
+                        {% block sw_sidebar_media_item_folder_navigation_current_folder_name%}
+                            <h4 class="sw-sidebar-media-item__headline-current-folder">{{ mediaFolder.name }}</h4>
+                        {% endblock %}
                     </div>
                 {% endblock %}
 
                 {% block sw_sidebar_media_item_media_item_list %}
-                    <sw-media-media-item
-                        v-for="mediaItem in mediaItems"
-                        :key="mediaItem.id"
-                        :item="mediaItem"
-                        :showSelectionIndicator="false"
-                        :showContextMenuButton="true"
-                        :selected="false"
-                        :isList="true"
-                        @sw-media-media-item-delete="handleMediaGridItemDelete">
+                    {% block sw_sidebar_media_item_media_item_list_folder_item %}
+                        <sw-media-folder-item
+                            v-for="folder in subFolders"
+                            :key="folder.id"
+                            :item="folder"
+                            :showSelectionIndicator="false"
+                            :showContextMenuButton="true"
+                            :selected="false"
+                            :isList="true"
+                            @sw-media-item-clicked="onNavigateToFolder(folder.id)">
+                        </sw-media-folder-item>
+                    {% endblock %}
 
-                        {% block sw_sidebar_media_item_context_items %}
-                            <slot name="context-menu-items" :mediaItem="mediaItem"></slot>
-                        {% endblock %}
-                    </sw-media-media-item>
+                    {% block sw_sidebar_media_item_media_item_list_media_item%}
+                        <sw-media-media-item
+                            v-for="mediaItem in mediaItems"
+                            :key="mediaItem.id"
+                            :item="mediaItem"
+                            :showSelectionIndicator="false"
+                            :showContextMenuButton="true"
+                            :selected="false"
+                            :isList="true"
+                            @sw-media-media-item-delete="handleMediaGridItemDelete">
+
+                            {% block sw_sidebar_media_item_context_items %}
+                                <slot name="context-menu-items" :mediaItem="mediaItem"></slot>
+                            {% endblock %}
+                        </sw-media-media-item>
+                    {% endblock %}
 
                     {% block sw_sidebar_media_item_load_more_button %}
                         <sw-button
