--- a/Resources/administration/src/app/component/media/sw-media-field/sw-media-field.html.twig
+++ b/Resources/administration/src/app/component/media/sw-media-field/sw-media-field.html.twig
@@ -20,27 +20,51 @@
 
         {% block sw_media_field_media_picker %}
             <transition name="sw-media-picker-down">
-                <div v-if="showPicker" class="sw-media-field-picker" :style="pickerClasses">
-                    {% block sw_media_field_search_field %}
-                        <sw-simple-search-field v-model="searchTerm"></sw-simple-search-field>
-                    {% endblock %}
+                <div v-if="showPicker" class="sw-media-field__expanded-content" :style="pickerClasses">
+                    <div class="sw-media-field__actions_bar">
+                        <sw-button class="sw-media-field__action-button" @click="toggleUploadField">
+                            <sw-icon class="sw-media-field__icon-add" name="default-basic-plus-line" small></sw-icon>
+                            {{ toggleButtonLabel }}
+                        </sw-button>
 
-                    {% block sw_media_field_media_list %}
-                        <sw-loader v-if="isLoadingSuggestions" style="position: static"></sw-loader>
+                        <sw-button v-if="mediaId" class="sw-media-field__action-button is--remove" @click="removeLink">
+                            <sw-icon class="sw-media-field__icon-remove" name="small-default-x-circle" small>
+                            </sw-icon>
+                            {{ $tc('global.sw-media-field.labelUnlink') }}
+                        </sw-button>
+                    </div>
 
-                        <ul v-else>
-                            <li v-for="suggestion in suggestedItems">
-                                {% block sw_media_field_suggestion_preview %}
-                                    <sw-media-media-item class="sw-media-field-media__list-item"
-                                        :item="suggestion"
-                                        :isList="true"
-                                        :showContextMenuButton="false"
-                                        @sw-media-item-clicked="mediaItemChanged(suggestion.id)">
-                                    </sw-media-media-item>
-                                {% endblock %}
-                            </li>
-                        </ul>
-                    {% endblock %}
+                    <sw-media-upload
+                        v-if="showUploadField"
+                        variant="regular"
+                        :allowMultiSelect="false"
+                        catption="Upload File"
+                        @new-uploads-added="uploadNewFile"
+                        @media-upload-success="exposeNewId">
+                    </sw-media-upload>
+
+                    <div v-else class="sw-media-field__media-selection">
+                        {% block sw_media_field_search_field %}
+                            <sw-simple-search-field v-model="searchTerm"></sw-simple-search-field>
+                        {% endblock %}
+
+                        {% block sw_media_field_media_list %}
+                            <sw-loader class="sw-media-field__picker-loader" v-if="isLoadingSuggestions"></sw-loader>
+
+                            <ul v-else>
+                                <li v-for="suggestion in suggestedItems">
+                                    {% block sw_media_field_suggestion_preview %}
+                                        <sw-media-media-item class="sw-media-field-media__list-item"
+                                            :item="suggestion"
+                                            :isList="true"
+                                            :showContextMenuButton="false"
+                                            @sw-media-item-clicked="mediaItemChanged(suggestion.id)">
+                                        </sw-media-media-item>
+                                    {% endblock %}
+                                </li>
+                            </ul>
+                        {% endblock %}
+                    </div>
                 </div>
             </transition>
         {% endblock %}
